// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Kusto Example renders the Azure Kusto Example and checks snapshot 1`] = `
"{
  "data": {
    "azurerm_client_config": {
      "CurrentClientConfig": {
      }
    }
  },
  "output": {
    "Kusto_data_ingestion_uri": {
      "value": "\${azurerm_kusto_cluster.kusto_Kusto_6B093AC5.data_ingestion_uri}"
    },
    "Kusto_id": {
      "value": "\${azurerm_kusto_cluster.kusto_Kusto_6B093AC5.id}"
    },
    "Kusto_identity": {
      "sensitive": true,
      "value": "\${azurerm_kusto_cluster.kusto_Kusto_6B093AC5.identity[0]}"
    },
    "Kusto_uri": {
      "value": "\${azurerm_kusto_cluster.kusto_Kusto_6B093AC5.uri}"
    },
    "id": {
      "value": "\${azurerm_kusto_database.kusto_testDB1_kusto-db-testDB1_D1A53426.id}"
    },
    "location": {
      "value": "\${azurerm_resource_group.rg_1429A41A.location}"
    },
    "name": {
      "value": "\${azurerm_resource_group.rg_1429A41A.name}"
    }
  },
  "provider": {
    "azurerm": [
      {
        "features": {
          "resource_group": {
            "prevent_deletion_if_contains_resources": false
          }
        }
      }
    ]
  },
  "resource": {
    "azurerm_kusto_cluster": {
      "kusto_Kusto_6B093AC5": {
        "auto_stop_enabled": true,
        "identity": {
          "identity_ids": [
          ],
          "type": "SystemAssigned"
        },
        "location": "\${azurerm_resource_group.rg_1429A41A.location}",
        "name": "kusto\${var.name}",
        "public_network_access_enabled": true,
        "purge_enabled": false,
        "resource_group_name": "\${azurerm_resource_group.rg_1429A41A.name}",
        "sku": {
          "capacity": 2,
          "name": "Dev(No SLA)_Standard_D11_v2"
        },
        "streaming_ingestion_enabled": true,
        "zones": [
          "1",
          "2",
          "3"
        ]
      }
    },
    "azurerm_kusto_database": {
      "kusto_testDB1_kusto-db-testDB1_D1A53426": {
        "cluster_name": "kusto\${var.name}",
        "hot_cache_period": "P7D",
        "location": "\${azurerm_resource_group.rg_1429A41A.location}",
        "name": "testDB1",
        "resource_group_name": "\${azurerm_resource_group.rg_1429A41A.name}",
        "soft_delete_period": "P31D"
      }
    },
    "azurerm_kusto_database_principal_assignment": {
      "kusto_testDB1_kusto-db-User1Admin-access_836A7F36": {
        "cluster_name": "kusto\${var.name}",
        "database_name": "testDB1",
        "name": "User1Admin",
        "principal_id": "\${data.azurerm_client_config.CurrentClientConfig.client_id}",
        "principal_type": "User",
        "resource_group_name": "\${azurerm_resource_group.rg_1429A41A.name}",
        "role": "Admin",
        "tenant_id": "\${data.azurerm_client_config.CurrentClientConfig.tenant_id}"
      }
    },
    "azurerm_kusto_script": {
      "kusto_testDB1_kusto-db-testDB1-script-MyTestScript_228E71EF": {
        "continue_on_errors_enabled": false,
        "database_id": "\${azurerm_kusto_database.kusto_testDB1_kusto-db-testDB1_D1A53426.id}",
        "force_an_update_when_value_changed": "1b98d80c44453d043e9faf8aa4ca9e9e",
        "name": "script-MyTestScript",
        "script_content": ".create table MyTestTable2 ( Timestamp:datetime, User:string, Value:int32 )"
      },
      "kusto_testDB1_kusto-db-testDB1-table-MyTestTable_A0AAD29F": {
        "continue_on_errors_enabled": false,
        "database_id": "\${azurerm_kusto_database.kusto_testDB1_kusto-db-testDB1_D1A53426.id}",
        "force_an_update_when_value_changed": "9b2184ae8b9df7cda6deb740fbba4e37",
        "name": "MyTestTable",
        "script_content": ".create table MyTestTable ( Timestamp:datetime, User:string, Value:int32 )"
      }
    },
    "azurerm_resource_group": {
      "rg_1429A41A": {
        "lifecycle": [
          {
            "ignore_changes": [
            ]
          }
        ],
        "location": "eastus",
        "name": "rg-\${var.name}"
      }
    },
    "azurerm_role_assignment": {
      "kusto_TfTokenTOKEN47Contributor_role_1777E8D7": {
        "principal_id": "\${data.azurerm_client_config.CurrentClientConfig.object_id}",
        "role_definition_name": "Contributor",
        "scope": "\${azurerm_kusto_cluster.kusto_Kusto_6B093AC5.id}"
      }
    }
  },
  "terraform": {
    "required_providers": {
      "azurerm": {
        "source": "azurerm",
        "version": "3.75.0"
      }
    }
  },
  "variable": {
    "name": {
      "default": "test",
      "description": "System name used to randomize the resources",
      "type": "string"
    }
  }
}"
`;

exports[`Kusto With Defaults renders an Kusto with defaults and checks snapshot 1`] = `
"{
  "output": {
    "Kusto_data_ingestion_uri": {
      "value": "\${azurerm_kusto_cluster.testAzureKustoDefaults_Kusto_4306B42C.data_ingestion_uri}"
    },
    "Kusto_id": {
      "value": "\${azurerm_kusto_cluster.testAzureKustoDefaults_Kusto_4306B42C.id}"
    },
    "Kusto_identity": {
      "sensitive": true,
      "value": "\${azurerm_kusto_cluster.testAzureKustoDefaults_Kusto_4306B42C.identity[0]}"
    },
    "Kusto_uri": {
      "value": "\${azurerm_kusto_cluster.testAzureKustoDefaults_Kusto_4306B42C.uri}"
    }
  },
  "provider": {
    "azurerm": [
      {
        "features": {
        }
      }
    ]
  },
  "resource": {
    "azurerm_kusto_cluster": {
      "testAzureKustoDefaults_Kusto_4306B42C": {
        "auto_stop_enabled": true,
        "identity": {
          "identity_ids": [
          ],
          "type": "SystemAssigned"
        },
        "location": "eastus",
        "name": "kustotest",
        "public_network_access_enabled": true,
        "purge_enabled": false,
        "resource_group_name": "testrgname",
        "sku": {
          "capacity": 2,
          "name": "Dev(No SLA)_Standard_D11_v2"
        },
        "streaming_ingestion_enabled": true,
        "zones": [
          "1",
          "2",
          "3"
        ]
      }
    }
  },
  "terraform": {
    "required_providers": {
      "azurerm": {
        "source": "azurerm",
        "version": "3.75.0"
      }
    }
  }
}"
`;
